attempted some news styling

--- a/weather-app/src/styles/News.css
+++ b/weather-app/src/styles/News.css
@@ -1,3 +1,7 @@
 .news{
     text-align: center;
+    max-width: "sm";
+    border-color: white;
+    border-width: 200px;
+    border-radius: 10px;
 }
