messed around with news styling

--- a/weather-app/src/styles/News.css
+++ b/weather-app/src/styles/News.css
@@ -2,5 +2,6 @@
     /* MUI Approach */
     display: grid;
     grid-template-columns: 'repeat(2, 1fr)';
-    border-color: black;
+    /* background-color: blue; */
+    /* border-radius: 20px; */
 }
