successfully implemented current weather section

--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -1,8 +1,10 @@
 :root {
   background-color: #232D4B;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  color: rgba(255, 255, 255, 0.87);
 }
-/*
-:root {
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -10,7 +12,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-}
+} */
 
 /* body {
   margin: 0;
@@ -18,12 +20,12 @@
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-} * /
+} */
 
-h1 {
+/* h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
+} */
 
 button {
   border-radius: 8px;
@@ -44,4 +46,3 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-*/
