--- a/weather-app/src/styles/News.css
+++ b/weather-app/src/styles/News.css
@@ -1,7 +1,6 @@
 .news{
-    /* MUI Approach */
     display: grid;
     grid-template-columns: 'repeat(2, 1fr)';
-    background-color: magenta;
+    background-color: #E57200;
     border-radius: 20px;
 }
