--- a/weather-app/src/styles/WeatherMainPage.css
+++ b/weather-app/src/styles/WeatherMainPage.css
@@ -1,4 +1,6 @@
 .header {
     text-align: center;
-    background-color: green;
+    color: #232D4B;
+    background-color: rgba(255, 255, 255, 0.87);
+    border-radius: 20px;
 }
