--- a/weather-app/src/styles/CurrentWeather.css
+++ b/weather-app/src/styles/CurrentWeather.css
@@ -3,10 +3,15 @@
     padding: 10px;
     color: #232D4B;
     border-radius: 20px;
+    text-align: center;
 }
-.temp{
-    font-size: 3.2em;
+.temperature{
+    font-size: 3.55em;
 }
 .weather-main{
-    font-size:1.5em;
+    font-size: 1.5em;
+}
+.weather-icon{
+    width: 100px;
+    height: 100px;
 }
