Reached stopping point for styling and displaying of overall main page and hourly forecast

--- a/weather-app/src/styles/HourlyWeather.css
+++ b/weather-app/src/styles/HourlyWeather.css
@@ -4,4 +4,8 @@
     color: #232D4B;
     border-radius: 20px;
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
