--- a/weather-app/src/styles/CurrentWeather.css
+++ b/weather-app/src/styles/CurrentWeather.css
@@ -4,9 +4,13 @@
     color: #232D4B;
     border-radius: 20px;
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 .temperature{
-    font-size: 3.55em;
+    font-size: 3.90em;
 }
 .weather-main{
     font-size: 1.5em;
