--- a/weather-app/src/styles/DailyForecast.css
+++ b/weather-app/src/styles/DailyForecast.css
@@ -1,7 +1,9 @@
 .daily-forecast{
     color: #232D4B;
     align-items: center;
-}
-.temp{
     font-size: 1.5em;
+}
+.daily-weather-icon{
+    width: 75px;
+    height: 75px;
 }
