--- a/weather-app/src/styles/WeatherMainPage.css
+++ b/weather-app/src/styles/WeatherMainPage.css
@@ -3,4 +3,6 @@
     color: #232D4B;
     background-color: rgba(255, 255, 255, 0.87);
     border-radius: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
