--- a/weather-app/src/styles/Article.css
+++ b/weather-app/src/styles/Article.css
@@ -2,6 +2,13 @@
     text-align: center;
     max-width: "sm";
     font-family:'Courier New', Courier, monospace;
-    /* flex: 200px; */
-    margin: 10px;
+    background-color: rgba(255, 255, 255, 0.87);
+    padding: 10px;
+    color: #232D4B;
+    border-radius: 20px;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 200px;
 }
